Replace get with getFirst